<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutParent"
    android:background="@color/colorBlueBackground"
    tools:context=".activities.AddEditNoteActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_add"
        android:layout_margin="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleAndSearch"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/notes_title"
            android:textSize="32sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingBottom="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchIcon"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/app_name"
            android:paddingTop="15sp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/noteSearch"
            android:hint="@string/search_hint"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="25sp"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintLeft_toRightOf="parent" />

        <ImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:id="@+id/clearSearch"
            android:src="@drawable/ic_clear"
            android:contentDescription="@string/app_name"
            android:paddingBottom="15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerViewParent"
        app:layout_constraintTop_toBottomOf="@id/titleAndSearch">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/notesRecyclerView"
            android:layout_marginBottom="@dimen/_95sdp"
            android:padding="@dimen/_4sdp"
            android:clipToPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:listitem="@layout/recycler_item"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>